Some median mechanism phrasing

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -372,8 +372,10 @@ set of active voters, the mechanisms we use are
     \item {
         \textit{Median ($L_1$)}, defined as
         $\input{content/figures/equations/weighted-median}$.
-        Essentially, the median is the agent with whose additional weight the sum of
+        Essentially, the median is the agent whose additional weight makes the sum of
         weights becomes equal to or greater than half the total weight of the system.
+        The sum will occur in the same order as the ordering of voters in 
+        \systemproxies.
     }
     \item {
         \textit{Mean ($L_2$)}, defined as
