Removed statement about proxy not changing its preference

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -32,19 +32,18 @@ Or is it a viable alternative to direct voting?
 If proxy voting does introduce error, perhaps alternative voting mechanisms or systems
 can be used to mitigate that effect while still maintaining the benefits of proxy
 voting.
+
 This study attempts to answer these questions by analyzing the effects of proxy
 voting on the results of a vote under a number of preference distributions.
 We employ several voting mechanisms and rank them according to their performance when
 applied under several preference distributions.
-We additionally explore the use of alternative proxy voting systems, such as
-allowing an individual to select a preference dependent on the positions of their
-constituents, and determine if they are more effective than the traditional proxy
-voting system where a single proxy is chosen.
+We additionally explore the use of cooperative mechanisms, which determine how and
+under what rules proxies cooperate, or don't cooperate, with their constituents.
 Finally, as a part of this study we implement and describe voting over a continuous
 interval instead of the typical binary (in favor or against) vote.
 
 This topic is of large importance because of the potential ramifications of using
-proxy voting directly in the legislative process.
+proxy voting directly in the legislative and other processes.
 If proxy voting does not have a large effect on the results of the vote, then it
 can be used to significantly ease the process and lower the risk of participating in
 Congress during pandemics or other emergencies.
@@ -504,11 +503,6 @@ A neutral opinion can be represented as a preference close to the middle of the
 preference space, which decreases the desire for abstention when voting is possible.
 Nevertheless, as a baseline, we will explore occasions where those who are not
 physically present are unable to vote.
-
-We also assume proxy delegations occur after all deliberations for the current round of
-voting and that voter preferences do not change after deliberation.
-This simplifies our analysis because we do not need to worry about a proxy's opinion
-changing during deliberation and ostracizing its constituents.
 
 Finally, we assume that there are no factors besides closeness in opinion that affect
 the choice of proxy.
