How proxy voting is beneficial for proxies

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -125,6 +125,12 @@ How proxies coordinate with their constituents has a large impact on both the we
 and the accuracy of the system, and so we will examine proxy voting under both
 selfish and cooperative scenarios.
 
+Similarly, proxy voting can be beneficial for the proxies.
+By serving as a proxy, an agent can potentially swing a vote more in its favor.
+Serving as a proxy also allows the agent to have a stronger voice during
+deliberation by showing how many other agents agree with it, or at least how many
+have similar opinions.
+
 Since a proxy can vote how it wants, a voter would not want to give its voting power to
 just any proxy, but rather one that would still be `close enough' to their preference.
 Similarly, a proxy would not want to be a delegate for a voter who does not share a
