Cleaned up some phrasing and changes

--- a/abstract.tex
+++ b/abstract.tex
@@ -5,7 +5,7 @@
 % A space is needed before the text starts so that the first paragraph
 % is indented properly. Max 350 words.
 
-    % TODO: Rewrite
+    % TODO: Add blurb about coordination mechanisms
     In early 2020, the United States Congress passed a resolution to permit the
     use of proxy voting during emergencies for members of the House of Representatives.
     Proxy voting is a system of voting where a voter can assign another voter, called
