--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -22,12 +22,14 @@ The type of proxy voting in Congress is not the traditional type of proxy vote.
 Instead, it is more similar to voting remotely, as quarantining members need to
 meet via video conference and the delegated proxy is required vote exactly as
 directed on behalf of their constituents.
+\vicki{Since you aren't using this type of proxy, why mention it? If the best example you can give is one that isn't what you are doing, the reader is confused by why proxy voting is important.}
 Nevertheless, using proxy voting in such an important part of the legislative process
 reignites the discussion on the effectiveness of traditional proxy voting where the
 proxy is able to vote on behalf of their constituents as the proxy desires.
 The proxy being able to vote as they desire simplifies the voting process, but
-creates error in that information about the delegators' preferences is lost.
-Does proxy voting introduce too much error into the voting process?
+creates error in that information about the delegators' preferences is lost.  \vicki{How is it lost if their vote is captured?}
+Does proxy voting introduce too much error into the voting process? \vicki{How is error introduced?  The reader needs to understand how proxy voting is done.
+}
 Or is it a viable alternative to direct voting?
 If proxy voting does introduce error, perhaps alternative voting mechanisms or systems
 can be used to mitigate that effect while still maintaining the benefits of proxy
@@ -103,6 +105,8 @@ them the most happy and determine an option the would best represent the group a
 whole.
 Alternatively, the proxy might decide to selfishly enhance its own voice by voting its
 own preference with all the weight allocated to it.
+\vicki{Calling it selfish seems too strong.  The inactive voters are asking a favor. It seems weird to say, "Please represent me, but alter your vote to be more what I want." 
+}
 Such an act might have consequences, such as the proxy no longer being allowed to
 represent its constituents and so losing its additional weight.
 We will call these different techniques `coordination mechanisms.'
@@ -144,7 +148,7 @@ order to bring the results closer to their opinion.\footnote{
     This delegation would go against the agents desires, but would pull the result of
     the vote more towards the agent's true preference, thereby yielding higher
     utility for that agent.
-}
+}\vicki{But this isn't really a function of proxy voting.  This is just strategic voting.  They could/would do the same thing if they were physically present.}
 These questions on strategy in proxy voting are important, but in order to first
 determine if proxy voting would even be useful, this study employs a similar technique
 as used in~\cite{Cohensius2017}, which has the voters pass their voting power to the
@@ -165,6 +169,7 @@ would have low accuracy and low welfare.
 In regard to proxy voting, the excellent system would maximize the use of proxies
 without degrading the accuracy of the system, while the poor would require all
 proxies to vote directly and still have high error.
+\vicki{Carried to extreme, however, everyone would vote remotely. This discounts the valuable discussion that happens in meetings.}
 
 Proxy voting has been shown to increase system accuracy when compared to only
 allowing active/willing agents to vote~\cite{Cohensius2017}.
@@ -184,6 +189,20 @@ this additional system welfare comes at the cost of some system accuracy in term
 the actual preferences of the voters.
 This cost comes about because proxies will likely not vote exactly the same as their
 constituents due to having different preferences.
+\vicki{If this were the real problem, we could just make proxies vote exactly as their constituents desired.  They could just vote for each one individually. {.2, .3, .33, .5}.  To me the problem is that votes change with discussion, so the proxy is entrusted to make decisions as amendments and new issues are raised.
+
+Before going into specific examples, give us the structure for how proxies operate.
+
+Aggregation: mean, median, lp aggregation, plurality
+
+Voting:  continuous space, finite set of options   
+(Note, we are assuming even a finite set of options are ordered.  This isn't always the case, right?  If my vote is between Sarah, Joe, and John, there may not be a linear ordering that all agree to.
+
+Proxy: averages votes of constituents.  Votes their own preference.
+
+
+}
+
 This causes information about the delegators' preferences to be lost and the system's
 accuracy to suffer.
 The loss in accuracy may be acceptable, however, if the system's welfare is sufficiently
@@ -219,7 +238,7 @@ preferences.
         The x-axis represents some preference space, where the leftmost point is
         the most preference most against some idea and the rightmost point is the most
         preference most in favor of the same idea.
-        Importantly, points towards the center of the space are more ambivalent about
+        Importantly, points towards the center of the space are more ambivalent \vicki{ambivalent seems too strong.  According to the dictionary: it means you have contradictory or mixed feelings about it.  Couldn't you just like the centrist approach?  }  about
         the topic or prefer a more moderate approach than the extremes on either end.
     }
     \label{fig:system-metric-space}
@@ -230,16 +249,17 @@ Votes are aggregated into an output using a \textit{voting mechanisms} or
 Two common voting mechanisms are the \textit{plurality} and \textit{mean} voting rules.
 The mean mechanism inherently works to a continuous space, since it can take all
 preferences, multiply them by their weights, and then average them.
-Plurality, on the other hand, needs to be adapted to operate in a continuous space.
+Plurality  \vicki{Define first, before adapting.}, on the other hand, needs to be adapted to operate in a continuous space.
 In our implementation, we will treat plurality as if the proxies themselves were
 candidates.
 This is similar to the framework in~\cite{Bulteau2021} treating each preference as a
 proposal.
 As such, the plurality mechanism will select the preference of the active voter with
 the most weight.
+\vicki{This doesn't seem right, as it gives the advantage to proxy voters. On a continuous space, plurality doesn't really make sense. This makes more sense to me.  If there are three real options (-1, 0, 1), count the number of voters in equal ranges about these points.  Select the option with the most votes.}
 
 Proxy voting may seem like an extremely attractive option for the House of
-Representatives, and other organizations, to use.
+Representatives, and other organizations, to use.  \vicki{We aren't ready for this example as we don't know how the proxies deal with a variety of constituent votes.} 
 However, it is not without its flaws.
 As a simple example, consider a vote taking over preference
 space $\systemspace = [-1, 1]$ with agent preferences $\truthof{\agent_1} = -1$,
@@ -335,6 +355,7 @@ If the majority of votes are hovering around the center, say between in the inte
 $[-0.25, 0.25]$, then it is likely that the majority of voters are not actually fully
 satisfied by the law, but still believe some change is necessary.
 In other words, neither option is satisfactory.
+\vicki{Here you are assuming that the middle option isn't really a choice.  There are only two options.  Since we don't know which options are really possible, this is confusing.  Try considering the cases (binary, continuous) separately.  }
 This provides a third option: refactoring the law to be more in line with the
 voters' opinions.
 Such an option is extremely beneficial, since without it voters are encouraged to
@@ -388,6 +409,7 @@ set of active voters, the mechanisms we use are
         \textit{Mean ($L_2$)}, defined as
         $\input{content/figures/equations/weighted-mean}$.
         This is a typical weighted average.
+        \vicki{I thought l2 was sum of squares of differences???}
     }
     \item {
         \textit{Mid-range ($L_\infty$)}, defined as
