--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -351,7 +351,7 @@ This system will allow one to see if the majority is truly in favor of some idea
 if they are only slightly in favor of it.
 For example, consider a situation where voters are asked to vote on some new law and
 are able to vote in the interval of $[-1, 1]$.
-If the majority of votes are hovering around the center, say between in the interval
+If the majority of votes are hovering around the center, say in the interval
 $[-0.25, 0.25]$, then it is likely that the majority of voters are not actually fully
 satisfied by the law, but still believe some change is necessary.
 In other words, neither option is satisfactory.
