--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -18,7 +18,7 @@
 \appendixsection{Percent inside Extents}
 \autoref{tab:distributions-percent-inside-extents} displays the percent of votes that
 remain inside the desired extents per distribution.
-\com{Need a brief description of what these methods are and why they are used.}
+\vicki{Need a brief description of what these methods are and why they are used.}
 
 \begin{table}[htbp]
     % increase table row spacing, adjust to taste
